--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workdo</title>
-    <link rel="stylesheet" href="/asset/css/index.css">
+    <link rel="stylesheet" href="./asset/css/index.css">
     <!-- <link rel="stylesheet" href="/asset/css/headerPage.css">
     <link rel="stylesheet" href="/asset/css/containerPage.css"> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,380,0,0" />
-    <link rel="icon" href="/asset/img/favicon.png">
+    <link rel="icon" href="./asset/img/favicon.png">
 </head>
 
 <body>
@@ -291,7 +291,7 @@
             <!-- end main -->
         </section>
     </main>
-    <script src="/javascript/menu.js"></script>
+    <script src="./javascript/menu.js"></script>
 </body>
 
 </html>
