--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <div class="content-header">
                 <ul class="menu-notify">
                     <li class="col-half user-info">
-                        <img src="/asset/img/test4.jpg" alt="">
+                        <img src="./asset/img/test4.jpg" alt="">
                         <a href="">
                             <span>Đan Trường Nguyễn</span>
                         </a>
@@ -264,7 +264,7 @@
                         <div class="card">
                             <div class="column is-3">
                                 <div class="img">
-                                    <img src="/asset/img/test4.jpg" alt="">
+                                    <img src="./asset/img/test4.jpg" alt="">
                                 </div>
                             </div>
                             <div class="column is-9">
